# wii-u-gc-adapter

./: .gitignore  88-wii-u-gamecube-adapter.rules  CMakeLists.txt  LICENSE  Makefile  README.md  SDL_GameController.txt  run-wii-u-setup.sh  start-wii-u-adapter.sh  wii-u-gc-adapter.c  wii-u-gc-adapter.py
